# F_Brain_Lv2

./: .gitignore  docker-compose.yml
Server/: .env  Dockerfile  db.sqlite3  pyproject.toml
Server/server_config/: .env.exemple  <  celery.py  settings.py  task.py  urls.py
Server/server_config/Python-3.12.0/: Makefile  Makefile.pre  config.status  pyconfig.h
Server/server_config/Python-3.12.0/Modules/: _abc.gcda  _asynciomodule.gcda  _bisectmodule.gcda  _bz2module.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _contextvarsmodule.gcda  _cryptmodule.gcda  _csv.gcda  _curses_panel.gcda  _cursesmodule.gcda  _datetimemodule.gcda  _dbmmodule.gcda  _elementtree.gcda  _functoolsmodule.gcda  _gdbmmodule.gcda  _hashopenssl.gcda  _heapqmodule.gcda  _json.gcda  _localemodule.gcda  _lsprof.gcda  _lzmamodule.gcda  _opcode.gcda  _operator.gcda  _pickle.gcda  _posixsubprocess.gcda  _queuemodule.gcda  _randommodule.gcda  _ssl.gcda  _stat.gcda  _statisticsmodule.gcda  _struct.gcda  _testbuffer.gcda  _testcapimodule.gcda  _testclinic.gcda  _testimportmultiple.gcda  _testinternalcapi.gcda  _testmultiphase.gcda  _testsinglephase.gcda  _threadmodule.gcda  (+52 more)
Server/server_config/Python-3.12.0/Objects/: abstract.gcda  boolobject.gcda  bytearrayobject.gcda  bytes_methods.gcda  bytesobject.gcda  call.gcda  capsule.gcda  cellobject.gcda  classobject.gcda  codeobject.gcda  complexobject.gcda  descrobject.gcda  dictobject.gcda  enumobject.gcda  exceptions.gcda  fileobject.gcda  floatobject.gcda  frameobject.gcda  funcobject.gcda  genericaliasobject.gcda  genobject.gcda  iterobject.gcda  (+22 more)
(+160 files in other folders)
